--- a/CSS/01.css
+++ b/CSS/01.css
@@ -71,7 +71,7 @@ table {
     position: relative;
     overflow: hidden;
     flex: 1; 
-
+}
 .nav-menu a.active {
     background: #ff9800;
     color: white;
