--- a/CSS/01.css
+++ b/CSS/01.css
@@ -77,7 +77,7 @@ table {
     color: white;
     font-weight: 700;
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2); 
-
+}
 /* Уберите границу у последнего элемента */
 .nav-menu li:last-child a {
     border-right: none;
